[package]
name = "psoco"
version = "0.1.0"
authors = ["Bernd Kaiser <bk@dfjk.eu>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/meldron/psoco"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hex = "0.3.2"
# sodiumoxide = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.4.4"
reqwest = { version = "0.9.20", default-features = false, features = ["rustls-tls"] }
rayon = "1.2.0"
toml = "0.5.6"
uuid = "0.7.4"
prettytable-rs = "^0.8"
structopt = "0.3"
directories = "2.0"
termcolor = "1"
xsalsa20poly1305 = "0.3.1"
ring = "0.16.13"
crypto_box = "0.1.0"
hex = "0.4.2"
rand = "0.7.3"
anyhow = "1.0"